<resources>
    <string name="app_name">Practica1</string>
    <string name="user_label">Usuario</string>
    <string name="user_edit">Introduce DNI</string>
    <string name="passwd_label">Contraseña</string>
    <string name="passwd_edit">Introduce contraseña</string>
    <string name="menu_test">Nuevo test</string>
    <string name="menu_ejercicio">Nuevo ejercicio</string>
    <string name="menu_seg">Seguimiento</string>
    <string name="boton_subirFichero">Subir fichero</string>
    <string name="boton_sacarFoto">Sacar foto</string>
    <string name="boton_grabarAudio">Grabar audio</string>
    <string name="boton_grabarVideo">Grabar video</string>
    <string name="button_send_test">Enviar</string>
    <string name="button_help">Ver ayuda</string>
    <string name="no_camera">No hay camara</string>
    <string name="no_app">No hay aplicacion de camara</string>
    <string name="no_micro">No hay microfono</string>
    <string name="subir">Test subido</string>
</resources>
